objects/Staff__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Home Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Afterschool__c</fullName>
        <formula>INCLUDES(CreateSections__c, &apos;Homework Assistance &amp; Extended Learning&apos;) ||
INCLUDES(CreateSections__c, &apos;Afterschool Heroes &amp; Extended Learning&apos;) ||
INCLUDES(CreateSections__c, &apos;Enrichment &amp; Extended Learning&apos;) || 
INCLUDES(CreateSections__c, &apos;Homework Assistance &amp; In School&apos;) ||
INCLUDES(CreateSections__c, &apos;Afterschool Heroes &amp; In School&apos;) ||
INCLUDES(CreateSections__c, &apos;Enrichment &amp; In School&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Afterschool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(MONTH(TODAY())&gt;MONTH(Birthday__c),YEAR(TODAY())-YEAR(Birthday__c),IF(AND(MONTH(TODAY())=MONTH(Birthday__c),DAY(TODAY())&gt;=DAY(Birthday__c)),YEAR(TODAY())-YEAR(Birthday__c),(YEAR(TODAY())-YEAR(Birthday__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <formula>INCLUDES(CreateSections__c, &apos;Attendance Check In Check Out &amp; In School&apos;) ||
INCLUDES(CreateSections__c, &apos;Attendance Check In Check Out &amp; Extended Learning&apos;) ||
INCLUDES(CreateSections__c, &apos;Coaching: Attendance &amp; In School&apos;) ||
INCLUDES(CreateSections__c, &apos;Coaching: Attendance &amp; Extended Learning&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_School__c</fullName>
        <label>Base School</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavior__c</fullName>
        <formula>INCLUDES(CreateSections__c, &apos;50 Acts of Greatness &amp; In School&apos;) ||
INCLUDES(CreateSections__c, &apos;50 Acts of Leadership &amp; In School&apos;) ||
INCLUDES(CreateSections__c, &apos;Coaching: Behavior (Local) &amp; In School&apos;) ||
INCLUDES(CreateSections__c, &apos;50 Acts of Greatness &amp; Extended Learning&apos;) ||
INCLUDES(CreateSections__c, &apos;50 Acts of Leadership &amp; Extended Learning&apos;) ||
INCLUDES(CreateSections__c, &apos;Coaching: Behavior (Local) &amp; Extended Learning&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Behavior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DC-Georgia Ave</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Base School</fullName>
                </value>
                <value>
                    <fullName>Campus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_Expiration_Date__c</fullName>
        <label>Certificate Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>Home City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateSections__c</fullName>
        <label>CreateSections</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tutoring: Math &amp; In School</fullName>
                </value>
                <value>
                    <fullName>Tutoring: Math &amp; Extended Learning</fullName>
                </value>
                <value>
                    <fullName>Tutoring: Literacy &amp; In School</fullName>
                </value>
                <value>
                    <fullName>Tutoring: Literacy &amp; Extended Learning</fullName>
                </value>
                <value>
                    <fullName>Enrichment &amp; In School</fullName>
                </value>
                <value>
                    <fullName>Enrichment &amp; Extended Learning</fullName>
                </value>
                <value>
                    <fullName>Attendance Check In Check Out &amp; In School</fullName>
                </value>
                <value>
                    <fullName>Attendance Check In Check Out &amp; Extended Learning</fullName>
                </value>
                <value>
                    <fullName>Coaching: Attendance &amp; In School</fullName>
                </value>
                <value>
                    <fullName>Coaching: Attendance &amp; Extended Learning</fullName>
                </value>
                <value>
                    <fullName>50 Acts of Greatness &amp; In School</fullName>
                </value>
                <value>
                    <fullName>50 Acts of Greatness &amp; Extended Learning</fullName>
                </value>
                <value>
                    <fullName>50 Acts of Leadership &amp; In School</fullName>
                </value>
                <value>
                    <fullName>50 Acts of Leadership &amp; Extended Learning</fullName>
                </value>
                <value>
                    <fullName>Coaching: SEL/SED (Local) &amp; In School</fullName>
                </value>
                <value>
                    <fullName>Coaching: SEL/SED (Local) &amp; Extended Learning</fullName>
                </value>
                <value>
                    <fullName>SEL/SED Check In Check Out &amp; Extended Learning</fullName>
                </value>
                <value>
                    <fullName>SEL/SED Check In Check Out &amp; In School</fullName>
                </value>
                <value>
                    <fullName>Homework Assistance &amp; Extended Learning</fullName>
                </value>
                <value>
                    <fullName>Homework Assistance &amp; In School</fullName>
                </value>
                <value>
                    <fullName>Reading Inventory &amp; In School</fullName>
                </value>
                <value>
                    <fullName>Math Inventory &amp; In School</fullName>
                </value>
                <value>
                    <fullName>DESSA &amp; In School</fullName>
                </value>
                <value>
                    <fullName>50 Acts of Greatness</fullName>
                    <isActive>false</isActive>
                    <label>50 Acts of Greatness</label>
                </value>
                <value>
                    <fullName>50 Acts of Leadership</fullName>
                    <isActive>false</isActive>
                    <label>50 Acts of Leadership</label>
                </value>
                <value>
                    <fullName>Afterschool Heroes</fullName>
                    <isActive>false</isActive>
                    <label>Afterschool Heroes</label>
                </value>
                <value>
                    <fullName>Afterschool Heroes &amp; Extended Learning</fullName>
                    <isActive>false</isActive>
                    <label>Afterschool Heroes &amp; Extended Learning</label>
                </value>
                <value>
                    <fullName>Afterschool Heroes &amp; In School</fullName>
                    <isActive>false</isActive>
                    <label>Afterschool Heroes &amp; In School</label>
                </value>
                <value>
                    <fullName>Attendance Check In Check Out</fullName>
                    <isActive>false</isActive>
                    <label>Attendance Check In Check Out</label>
                </value>
                <value>
                    <fullName>Coaching: Attendance</fullName>
                    <isActive>false</isActive>
                    <label>Coaching: Attendance</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctorate_Degree_1__c</fullName>
        <label>Doctorate Degree 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctorate_Institute__c</fullName>
        <label>Doctorate Institute</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Focus_Lists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ACM&apos;s at participating sites will specialize in literacy or math. All ACM&apos;s will still support students in SEL and attendance coaching.</description>
        <label>ES Focus Lists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Email__c</fullName>
        <inlineHelpText>What is the emergency contact&apos;s email?</inlineHelpText>
        <label>Emergency Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_POC__c</fullName>
        <inlineHelpText>The name of the emergency contact for this staff member</inlineHelpText>
        <label>Emergency Contact POC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <inlineHelpText>What is the emergency contact&apos;s phone number?</inlineHelpText>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Staff__c</fullName>
        <label>Staff First Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Education__c</fullName>
        <label>Highest Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Masters</fullName>
                </value>
                <value>
                    <fullName>Doctorate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Holding_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holding Source</label>
        <referenceTo>HoldingObj__c</referenceTo>
        <relationshipLabel>Staff</relationshipLabel>
        <relationshipName>Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staff</relationshipLabel>
        <relationshipName>Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instructional_Staff__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Instructional Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSectionDESSA__c</fullName>
        <formula>INCLUDES(CreateSections__c, &apos;DESSA&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DESSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSectionLiteracy__c</fullName>
        <formula>INCLUDES(CreateSections__c, &apos;Tutoring: Literacy &amp; In School&apos;) ||
INCLUDES(CreateSections__c, &apos;Tutoring: Literacy &amp; Extended Learning&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ELA/Literacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSectionMathInventory__c</fullName>
        <formula>INCLUDES(CreateSections__c, &apos;Math Inventory&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Math Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSectionMath__c</fullName>
        <formula>INCLUDES(CreateSections__c, &apos;Tutoring: Math &amp; In School&apos;) ||
INCLUDES(CreateSections__c, &apos;Tutoring: Math &amp; Extended Learning&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Math</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSectionReadingInventory__c</fullName>
        <formula>INCLUDES(CreateSections__c, &apos;Reading Inventory&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reading Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licensure_Institution__c</fullName>
        <label>Licensure  Institution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensure_Type__c</fullName>
        <label>Licensure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Teacher</fullName>
                </value>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Special Education</fullName>
                </value>
                <value>
                    <fullName>Pupil Personnel Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_s_Degree_1__c</fullName>
        <label>Master&apos;s Degree 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_s_Degree_2__c</fullName>
        <label>Master&apos;s Degree 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_s_Degree_3__c</fullName>
        <label>Master&apos;s Degree 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Masters_Institution_1__c</fullName>
        <label>Masters Institution 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Masters_Institution_2__c</fullName>
        <label>Masters Institution 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Masters_Institution_3__c</fullName>
        <label>Masters Institution 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name_Staff__c</fullName>
        <label>Staff Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Returning__c</fullName>
        <label>New/Returning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Returning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Official_First_Name__c</fullName>
        <label>Official First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Staff Member&apos;s employer</description>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Staff</relationshipLabel>
        <relationshipName>Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personal_Phone__c</fullName>
        <label>Personal Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position_2__c</fullName>
        <label>Position 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Coordinators/Dir</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Social Worker</fullName>
                </value>
                <value>
                    <fullName>Teacher</fullName>
                </value>
                <value>
                    <fullName>YRP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Aide</fullName>
                </value>
                <value>
                    <fullName>Behavior Coor</fullName>
                </value>
                <value>
                    <fullName>Coordinators/Dir</fullName>
                </value>
                <value>
                    <fullName>CTR</fullName>
                </value>
                <value>
                    <fullName>ELL</fullName>
                </value>
                <value>
                    <fullName>Family Outreach Coordinator</fullName>
                </value>
                <value>
                    <fullName>General Ed Teacher</fullName>
                </value>
                <value>
                    <fullName>Inclusion</fullName>
                </value>
                <value>
                    <fullName>Marketing/Dev</fullName>
                </value>
                <value>
                    <fullName>NLNS Resident</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Social Work</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
                <value>
                    <fullName>Speech Language Pathologist</fullName>
                </value>
                <value>
                    <fullName>Wilson</fullName>
                </value>
                <value>
                    <fullName>YRP</fullName>
                </value>
                <value>
                    <fullName>Coordintaors/Dir</fullName>
                </value>
                <value>
                    <fullName>NLNS Resdient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_classroom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred classroom</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Teachers</relationshipLabel>
        <relationshipName>Teachers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualifications__c</fullName>
        <label>Qualifications</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honors</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>ELA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>African American</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Type__c</fullName>
        <label>Role Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <formula>TEXT(Organization__r.Site__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_18_digit_id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff 18 digit id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Code__c</fullName>
        <label>Staff Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Email__c</fullName>
        <formula>Individual__r.User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Last_Name__c</fullName>
        <label>Staff Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Photo__c</fullName>
        <label>Staff Photo</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Staff_Picture_c__c</fullName>
        <formula>IMAGE(&quot;/resource/&quot; &amp; $Setup.pictureHelper__c.pictureURL__c &amp; &quot;/pictures/&quot; &amp;  ID__c   &amp; &quot;.jpg&quot;, &quot;Staff Photo&quot;, 200, 200)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>Home State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Staff</relationshipLabel>
        <relationshipName>Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Grade Teacher</fullName>
                </value>
                <value>
                    <fullName>2nd Grade Teacher</fullName>
                </value>
                <value>
                    <fullName>3rd Grade Teacher</fullName>
                </value>
                <value>
                    <fullName>4th Grade Teacher</fullName>
                </value>
                <value>
                    <fullName>5th Grade Teacher</fullName>
                </value>
                <value>
                    <fullName>6th Grade Teacher</fullName>
                </value>
                <value>
                    <fullName>7th Grade Teacher</fullName>
                </value>
                <value>
                    <fullName>8th Grade Teacher</fullName>
                </value>
                <value>
                    <fullName>AmeriCorps - Extended Day Leader</fullName>
                </value>
                <value>
                    <fullName>Art Teacher</fullName>
                </value>
                <value>
                    <fullName>Behavior Analyst</fullName>
                </value>
                <value>
                    <fullName>Behavior and Culture Coordinator</fullName>
                </value>
                <value>
                    <fullName>Capital Teaching Resident</fullName>
                </value>
                <value>
                    <fullName>Chief Academic Officer</fullName>
                </value>
                <value>
                    <fullName>Child Care Subsidy Manager</fullName>
                </value>
                <value>
                    <fullName>Curriculum Coordinator</fullName>
                </value>
                <value>
                    <fullName>Dance Teacher</fullName>
                </value>
                <value>
                    <fullName>Director of Family and Community Outreach</fullName>
                </value>
                <value>
                    <fullName>Director of Marketing and Development</fullName>
                </value>
                <value>
                    <fullName>Director of Operations and Finance</fullName>
                </value>
                <value>
                    <fullName>Director of Student Support Services</fullName>
                </value>
                <value>
                    <fullName>Director of Year Round Programs</fullName>
                </value>
                <value>
                    <fullName>English Language Learning Teacher</fullName>
                </value>
                <value>
                    <fullName>Facility Aide</fullName>
                </value>
                <value>
                    <fullName>Facility Project Manager</fullName>
                </value>
                <value>
                    <fullName>Food Manager and Facility Assistant</fullName>
                </value>
                <value>
                    <fullName>Founder and Head of School</fullName>
                </value>
                <value>
                    <fullName>Health and Fitness Teacher</fullName>
                </value>
                <value>
                    <fullName>Inclusion Teacher</fullName>
                </value>
                <value>
                    <fullName>Kindergarten Teacher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Undergraduate_Degree_1__c</fullName>
        <label>Undergraduate Degree 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Degree_2__c</fullName>
        <label>Undergraduate Degree 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Degree_3__c</fullName>
        <label>Undergraduate Degree 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Institution_1__c</fullName>
        <label>Undergraduate Institution 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Institution_2__c</fullName>
        <label>Undergraduate Institution 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Institution_3__c</fullName>
        <label>Undergraduate Institution 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Staff__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <formula>Individual__r.User_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilization__c</fullName>
        <label>Utilization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Years_at_School__c</fullName>
        <label>Years at School</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Home Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>